src/styles/custom-breakpoints.css
/* ... */
@media (min-width: 1440px) {
  #hero h2 {
    font-size: 5rem;
  }
  .filters-container {
    max-width: 70rem;
  }
  .dog-grid-layout {
    width: 80rem;
  }
  .dog-card-container {
    width: 22rem;
  }
}
@media (min-width: 2560px) and (min-height: 1440px) {
  .text-fluid-nav {
    font-size: 1.5rem;
  }
  .heading-fluid-hero {
    font-size: 6.5rem;
  }
  #hero {
    height: 75dvh;
  }
  .hero-cta-section p {
    font-size: 1.75rem;
  }
  .hero-cta-section {
    max-width: 60rem;
    margin-block: 4rem;
  }
  .img-fluid-hero-dog {
    width: 44rem;
    height: 44rem;
  }
  .hero-circle-xl {
    width: 46rem;
    height: 46rem;
    transform: translateX(15%) translateY(30%);
  }
  .hero-circle-md {
    width: 30rem;
    height: 30rem;
    transform: translateX(-60%) translateY(40%);
  }
  .hero-circle-sm {
    width: 20rem;
    height: 20rem;
    transform: translateX(-160%) translateY(40%);
  }
  #pets .container {
    max-width: 1880px;
    padding-inline: 2rem;
  }
  #pets-heading {
    width: 40rem;
    margin-inline: auto;
  }
  .filters-container {
    max-width: 90rem;
  }
  .dog-grid-layout {
    width: 100rem;
  }
  .dog-card-container {
    width: 28rem;
    min-height: 30rem;
  }
  .dog-card-gender-text {
    font-size: 1.25rem;
  }
  .dog-card-desc-text {
    font-size: 1.125rem;
  }
  .text-fluid-modal-desc {
    font-size: 1.25rem;
  }
  .circle-md {
    width: 30rem;
    height: 30rem;
    transform: translateX(110%) translateY(-20%);
  }
  .about-circle-xs {
    width: 15rem;
    height: 15rem;
    transform: translateX(215%) translateY(5%);
  }
  .contact-label {
    font-size: 1.5rem;
  }
  .circle-contact-xxs {
    width: 3.5rem;
    height: 3.5rem;
  }
  .text-fluid-section-heading,
  .text-fluid-about-heading {
    font-size: 10rem;
  }
  .text-fluid-rules-heading,
  .text-fluid-contact-heading {
    font-size: 8rem;
  }
  .text-fluid-help-heading {
    font-size: 5rem;
  }
}

@media (min-width: 2560px) and (min-height: 1600px) {
  .circle-position-6xl-md {
    transform: translateY(25%);
  }
}

